--- a/www/css/sepiaFW-skin-canary-blue.css
+++ b/www/css/sepiaFW-skin-canary-blue.css
@@ -1,5 +1,5 @@
 html {
-	background-image: url(../img/birds.png);
+	background-image: url("../img/birdsAlpha.png");
     background-size: auto 70%;
     background-position: 50% 50%;
     background-color: #fff;
@@ -157,7 +157,6 @@ html.landscape-small #sepiaFW-chat-controls .eButton {
 	border: 1px solid #000;
 }
 .sepiaFW-menu .sepiaFW-toggle-btn {
-	border: 1px solid rgba(0, 0, 0, 0.25);
 	border: 1px solid #000;
     border-radius: 18px;
 }
@@ -381,7 +380,6 @@ html.landscape-small #sepiaFW-chat-controls .eButton {
 .sepiaFW-cards-list-body .weatherNowSmall > div,
 .sepiaFW-cards-list-body .linkCard > div,
 .sepiaFW-cards-list-body .timeEvent > div,
-.sepiaFW-cards-list-body .newsArticle .newsCenter,
 .sepiaFW-cards-list-body .radioStation > div,
 .sepiaFW-cards-list-body .listElement .listRight,
 .sepiaFW-cards-list-body .newsArticle .newsCenter {
@@ -413,6 +411,9 @@ html.landscape-small #sepiaFW-chat-controls .eButton {
 }
 .sepiaFW-cards-list-title.newsHeader button {
 	color: #000 !important;
+}
+.sepiaFW-cards-flexSize-container .cardBodyItem.embeddedWebPlayer iframe {
+    border: 2px solid #000;
 }
 
 /*----- teachUI -----*/
